--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -19,8 +19,8 @@ jobs:
 
             - name: Commit to changes to branch
               run: |
-                  git config --global user.name 'Test'
-                  git config --global user.email 'your-username@users.noreply.github.com'
+                  git config --global user.name 'gp201'
+                  git config --global user.email 'gp201@users.noreply.github.com'
                   git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
                   git commit -am "Automated report"
                   git push
