--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -12,15 +12,19 @@ jobs:
             - name: Install Doxygen
               run: |
                   cd ..
+                  ls
+                  pwd
                   wget https://github.com/doxygen/doxygen/archive/refs/tags/Release_1_8_14.tar.gz
-                  tar -xzf doxygen-Release_1_8_14.tar.gz
-                  cd doxygen-Release_1_8_14
+                  tar -xzf Release_1_8_14.tar.gz
+                  cd Release_1_8_14
                   mkdir build
                   cd build
                   cmake -G "Unix Makefiles" ..
                   make
                   sudo make install
                   cd ivar
+                  ls
+                  pwd
               shell: bash
 
             - name: Build pages
