--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -1,9 +1,20 @@
 name: Build pages using Doxygen
 on:
     workflow_dispatch:
+    pull_request:
+        branches:
+            - master
+        types:
+            - closed
+    push:
+        branches:    
+            - 'master'
+        paths:
+            - 'docs/'
 
 jobs:
-    build-pages:
+    if_merged:
+      if: github.event.pull_request.merged == true
         runs-on: ubuntu-latest
         steps:
             - name: Checkout repository
