--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -41,8 +41,8 @@ jobs:
 
             - name: Commit to changes to branch
               run: |
-                  git config --global user.name '${GH_USERNAME}'
-                  git config --global user.email '${GH_USERNAME}@users.noreply.github.com'
+                  git config --global user.name ${{ github.actor }}
+                  git config --global user.email '${{ github.actor }}@users.noreply.github.com'
                   git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
                   git commit -am "Update documentation"
                   git push
