--- a/.github/workflows/build_pages.yml
+++ b/.github/workflows/build_pages.yml
@@ -1,6 +1,11 @@
 name: Build pages using Doxygen
 on:
     workflow_dispatch:
+        inputs:
+            commitmsg:
+                description: 'Commit Message'
+                required: true
+                default: 'Update documentation'
     # pull_request:
     #     branches:
     #         - master
@@ -20,8 +25,6 @@ jobs:
             - name: Install Doxygen
               run: |
                   cd ..
-                  ls
-                  pwd
                   wget https://github.com/doxygen/doxygen/archive/refs/tags/Release_1_8_14.tar.gz
                   tar -xzf Release_1_8_14.tar.gz
                   cd doxygen-Release_1_8_14
@@ -31,8 +34,6 @@ jobs:
                   make
                   sudo make install
                   cd ../../ivar
-                  ls
-                  pwd
               shell: bash
 
             - name: Build pages
@@ -44,5 +45,5 @@ jobs:
                   git config --global user.name ${{ github.actor }}
                   git config --global user.email '${{ github.actor }}@users.noreply.github.com'
                   git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-                  git commit -am "Update documentation"
+                  git commit -am "${{ github.event.inputs.commitmsg }}"
                   git push
